added screenshots to www

--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
     <a href="#faq">FAQ</a>
     <a href="#doc">Documentation</a>
     <a href="#support">Support</a>
+    <a href="#screenshots">Screenshots</a>
    </div>
   </div>
   <div class="content">
@@ -81,6 +82,16 @@
     <span class="code">#herbstluftwm</span> at
     <span class="code">irc.oftc.net</span>.
 
+   <h1 id="screenshots">Screenshots</h1>
+   <!-- there screenshots are not in the git repo, so they must exist in the
+        target directory -->
+   <!-- this is too much html code... maybe i should switch to asciidoc -->
+   <a class="screenshot" href="irc-layout-tab.png">
+    <img src="irc-layout-tab.png" width="128">
+   </a>
+   <a class="screenshot" href="herbstluftwm-autumncolors.png">
+    <img src="herbstluftwm-autumncolors.png" width="128">
+   </a>
    <div class="footer">
     <b>Imprint:</b>
         Thorsten Wißmann,
