more spelling fixes in www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <link href="main.css" rel="stylesheet" type="text/css"> 
-  <title>Herbstluftwm</title>
+  <title>herbstluftwm</title>
  </head>
  <body>
   <div class="header">
