moved IRC channel from oftc to freenode

--- a/www/index.html
+++ b/www/index.html
@@ -78,9 +78,9 @@
    </ul>
 
    <h1 id="support">Support</h1>
-   feel free to join
-    <span class="code">#herbstluftwm</span> at
-    <span class="code">irc.oftc.net</span>.
+   Feel free to join the IRC channel
+    <span class="code">#herbstluftwm</span> on
+    <span class="code">irc.freenode.net</span>.
 
    <h1 id="screenshots">Screenshots</h1>
    <!-- there screenshots are not in the git repo, so they must exist in the
