www: display thumbnails of screenshots

--- a/www/index.html
+++ b/www/index.html
@@ -87,10 +87,10 @@
         target directory -->
    <!-- this is too much html code... maybe i should switch to asciidoc -->
    <a class="screenshot" href="irc-layout-tab.png">
-    <img src="irc-layout-tab.png" width="128">
+    <img src="irc-layout-tab-thumb.png" width="128">
    </a>
    <a class="screenshot" href="herbstluftwm-autumncolors.png">
-    <img src="herbstluftwm-autumncolors.png" width="128">
+    <img src="herbstluftwm-autumncolors-thumb.png" width="128">
    </a>
    <div class="footer">
     <b>Imprint:</b>
